v4-dev2 this update includes fixes to video aligment on small screens, also fixed mobile nav bar not displaying and fixed footer logo placement

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -452,6 +452,12 @@ nav{
   .wrapper{
     margin: 0 auto;
     width: 50%;
+    @media screen and (max-width: 800px){
+        width: 90%;
+        margin-bottom: 1em;
+        margin-left: 2.5em;
+
+    }
   }
   .videowrapper{
     position: relative;
@@ -572,6 +578,7 @@ footer {
         margin: auto;
         align-items: center;
         padding: 0%;
+        margin-top: 20px;
       }
   }
 }
